--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ const TFFieldsSection = ({ formData, onChange }) => {
   return /* @__PURE__ */ jsxRuntimeExports.jsxs(jsxRuntimeExports.Fragment, { children: [
     /* @__PURE__ */ jsxRuntimeExports.jsx("style", { dangerouslySetInnerHTML: { __html: inlineStyles } }),
     /* @__PURE__ */ jsxRuntimeExports.jsxs("details", { className: "tf-fields-section", children: [
-      /* @__PURE__ */ jsxRuntimeExports.jsx("summary", { children: "Term Frequency adjustments (defaults applied)" }),
+      /* @__PURE__ */ jsxRuntimeExports.jsx("summary", { children: "Term Frequency adjustments" }),
       /* @__PURE__ */ jsxRuntimeExports.jsxs("div", { className: "tf-fields-container", children: [
         renderField(
           "tf_first_name_surname_concat",
